gateway-host/ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-host-svc
  labels:
    app: gateway-host
spec:
  selector:
    app: gateway-host
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
